crates/etch-core/tests/snapshots/corpus_tests__extensions-frontmatter-full.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": {
      "raw": "title: \"Chronicle of the Ridge\"\nauthor: \"foxwriter42\"\nchapter: 7\ntags: [travel, winter, field-notes]\nseries:\n  name: \"Northern Passages\"\n  part: 3\ndraft: true\nword_count: auto\n",
      "fields": {
        "author": "foxwriter42",
        "chapter": 7,
        "draft": true,
        "series": {
          "name": "Northern Passages",
          "part": 3
        },
        "tags": [
          "travel",
          "winter",
          "field-notes"
        ],
        "title": "Chronicle of the Ridge",
        "word_count": "auto"
      }
    },
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "This document starts after a frontmatter block using several YAML field shapes."
          }
        ]
      }
    ]
  },
  "errors": []
}
