crates/etch-core/tests/snapshots/corpus_tests__extensions-frontmatter-no-frontmatter.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Heading",
        "level": 1,
        "content": [
          {
            "type": "Text",
            "value": "Direct Heading"
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "This document begins immediately with content and has no frontmatter block."
          }
        ]
      }
    ]
  },
  "errors": []
}
