crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-balanced-brackets.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The tooltip reads "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 19
              },
              "end": {
                "line": 1,
                "column": 58
              }
            },
            "name": "tooltip",
            "content": [
              {
                "type": "Text",
                "value": "array[0] is the first element"
              }
            ],
            "raw_content": "array[0] is the first element"
          },
          {
            "type": "Text",
            "value": " in the lesson notes."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "The code sample shows "
          },
          {
            "type": "InlineDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 2,
                "column": 23
              },
              "end": {
                "line": 2,
                "column": 59
              }
            },
            "name": "code",
            "content": [
              {
                "type": "Text",
                "value": "fn(a, b) -> Result<Vec<[u8]>>"
              }
            ],
            "raw_content": "fn(a, b) -> Result<Vec<[u8]>>"
          },
          {
            "type": "Text",
            "value": " in the margin."
          }
        ]
      }
    ]
  },
  "errors": []
}
