crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-bare.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Insert a "
          },
          {
            "type": "InlineDirective",
            "name": "pagebreak"
          },
          {
            "type": "Text",
            "value": " before the appendix begins."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "InlineDirective",
            "name": "toc"
          }
        ]
      }
    ]
  },
  "errors": []
}
