crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-cite.snap
---
source: crates/etch-core/tests/corpus_tests.rs
assertion_line: 821
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The quote comes from "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 22
              },
              "end": {
                "line": 1,
                "column": 35
              }
            },
            "name": "cite",
            "content": [
              {
                "type": "Emphasis",
                "content": [
                  {
                    "type": "Text",
                    "value": "Etch"
                  }
                ]
              }
            ],
            "raw_content": "*Etch*"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
