crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-escaped-bracket.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The tooltip says "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 18
              },
              "end": {
                "line": 1,
                "column": 49
              }
            },
            "name": "tooltip",
            "content": [
              {
                "type": "Text",
                "value": "use ] to close early"
              }
            ],
            "raw_content": "use \\] to close early"
          },
          {
            "type": "Text",
            "value": " in the parser guide."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "The note reads "
          },
          {
            "type": "InlineDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 2,
                "column": 16
              },
              "end": {
                "line": 2,
                "column": 52
              }
            },
            "name": "note",
            "content": [
              {
                "type": "Text",
                "value": "this has one [ extra bracket"
              }
            ],
            "raw_content": "this has one \\[ extra bracket"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
