crates/etch-core/tests/snapshots/corpus_tests__extensions-inline-directives-multiple-in-paragraph.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "At noon, "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 10
              },
              "end": {
                "line": 1,
                "column": 40
              }
            },
            "name": "character",
            "content": [
              {
                "type": "Text",
                "value": "Sable"
              }
            ],
            "raw_content": "Sable",
            "attrs": {
              "pairs": {
                "species": "fox"
              }
            }
          },
          {
            "type": "Text",
            "value": " pointed at "
          },
          {
            "type": "InlineDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 1,
                "column": 52
              },
              "end": {
                "line": 1,
                "column": 100
              }
            },
            "name": "tooltip",
            "content": [
              {
                "type": "Text",
                "value": "the old tower"
              }
            ],
            "raw_content": "the old tower",
            "attrs": {
              "pairs": {
                "text": "watch the stairs"
              }
            }
          },
          {
            "type": "Text",
            "value": " and said the meeting was on "
          },
          {
            "type": "InlineDirective",
            "directive_id": 3,
            "span": {
              "start": {
                "line": 1,
                "column": 129
              },
              "end": {
                "line": 1,
                "column": 147
              }
            },
            "name": "date",
            "attrs": {
              "pairs": {
                "format": "long"
              }
            }
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
